fixed an error on smaller devices

--- a/css/nasaAPI.css
+++ b/css/nasaAPI.css
@@ -16,3 +16,16 @@ body {
 .errMsg {
   color: #fe0000;
 }
+
+pre {
+  white-space: pre-wrap;
+  word-break: break-word;
+  max-width: 100%;
+  overflow-wrap: break-word;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 1em;
+  border-radius: 8px;
+  overflow: hidden;
+}
